--- a/flights/templates/flights/index.html
+++ b/flights/templates/flights/index.html
@@ -4,7 +4,9 @@
     <h1>Flights</h1>
     <ul>
     {% for flight in flights %}
-        <li>Fligh: {{ flight.id }} to {{ flight.destination }}</li>
+        <li>
+            <a href="{% url 'flight' flight.id %}">Flight: {{ flight.id }} to {{ flight.destination }}</a>
+        </li>
     {% endfor %}
     </ul>
 {% endblock %}
